# Trading_bot

./: CMakeLists.txt  Makefile  main.cpp  plot_graph.py
analytics/: audit_logger.hpp  equity_logger.hpp  performance_report.hpp  risk_logger.hpp  signal_logger.hpp  trade_logger.hpp
core/: config.hpp  paths.hpp  ring_buffer.hpp  types.hpp
data/: AAPL.csv  GC=F.csv  GOOG.csv  MSFT.csv  ^GSPC.csv  csv_feed.hpp  data_filter.hpp  feed.hpp
engine/: multi_asset_runner.hpp  risk_manager.hpp  trading_engine.hpp
execution/: broker.hpp  broker_sim.hpp  order_router.hpp  slippage_model.hpp  spread_model.hpp  twap.hpp
indicators/: atr.hpp  indicator.hpp  rsi.hpp  volume_spike.hpp
output/: equity.csv  risk.csv  signals.csv  trades.csv
portfolio/: portfolio.hpp  position.hpp
strategies/: sma_crossover.hpp  strategy.hpp  surgical_scalper.hpp
tools/: download_yahoo.py
